Team subscriptions done

--- a/stafford-olympics/src/scss/variables.scss
+++ b/stafford-olympics/src/scss/variables.scss
@@ -1,4 +1,6 @@
 $snackbar-wrapper-margin: 0px !default;
+$tabs-item-min-width: 0px !default;
+$tabs-item-padding: 5px !default;
 // $snackbar-wrapper-max-width: 100vw !default;
 // $snackbar-wrapper-min-width: 400px !default;
 
